--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p>Around the time that HTML 4.0 was published, a movement began to evolve HTML towards a more flexible style of markup language. Although authors had tried to anticipate the tags necessary to markup documents, the spread of the World Wide Web and the diversity of user agents made keeping up with requirements difficult. In the eyes of many, migrating to a markup language like XML, which allows authors to create their own tags to represent content, would alleviate those concerns and allow HTML to evolve organically. XML also contains stricter formatting rules than HTML, and a sizable number of authors and developers found HTML&rsquo;s lax parsing rules problematic. This effort resulted in the publishing of the XHTML 1.0 specification in 2000. Although it was not a dramatic departure from HTML 4.0, it did introduce new syntax rules to conform to XML requirements and eliminated the HTML elements that were seen to be dictating the presentation of content rather than the structure of it. </p>
 
       <p>
-        <img src="https://cdn.glitch.com/5b97fe67-24a7-4b5b-90fc-7b0bf4ed70da%2F200px-W3C_Icon.png?1518132661475" alt="W3C logo" width="200" height="136" class="flowLeft">
+        <img src="W3C_Icon.png" alt="W3C logo" width="200" height="136" class="flowLeft">
         Shortly after the 1.0 specification was published, work began on XHTML 2.0, which was to move HTML further towards XML. XHTML 2.0 was a dramatic departure from previous versions of HTML and was never able to gain any traction among browser developers. The specification languished for years in the W3C before its charter was revoked in 2009, essentially ending development.
       </p>
 
